--- a/cpp/pybind/visualization/CMakeLists.txt
+++ b/cpp/pybind/visualization/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(pybind PRIVATE
     viewcontrol.cpp
     visualization.cpp
     visualizer.cpp
+    rendering/material.cpp  # for RPC serialization
 )
 
 if (BUILD_GUI)
@@ -18,7 +19,6 @@ if (BUILD_GUI)
 
     target_sources(pybind PRIVATE
         rendering/rendering.cpp
-        rendering/material.cpp
     )
 endif()
 
