--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,12 +1,12 @@
 add_subdirectory(open3d)
-add_subdirectory(tools)
-add_subdirectory(apps)
-if (BUILD_UNIT_TESTS)
-    add_subdirectory(tests)
-endif()
+# add_subdirectory(tools)
+# add_subdirectory(apps)
+# if (BUILD_UNIT_TESTS)
+#     add_subdirectory(tests)
+# endif()
 if (BUILD_BENCHMARKS)
     add_subdirectory(benchmarks)
 endif()
-if (BUILD_PYTHON_MODULE)
-    add_subdirectory(pybind)
-endif()
+# if (BUILD_PYTHON_MODULE)
+#     add_subdirectory(pybind)
+# endif()
