--- a/3rdparty/benchmark/MakeAvailable/CMakeLists.txt
+++ b/3rdparty/benchmark/MakeAvailable/CMakeLists.txt
@@ -3,6 +3,18 @@ set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "This should be OFF. Enables install
 set(BENCHMARK_ENABLE_GTEST_TESTS OFF CACHE BOOL "This should be OFF. Enables gtest framework for the benchmark lib" FORCE)
 set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "This should be OFF. Enables tests for the benchmark lib" FORCE)
 
+set(
+CMAKE_C_COMPILER  ${CMAKE_C_COMPILER}
+CMAKE_CXX_COMPILER  ${CMAKE_CXX_COMPILER}
+CMAKE_CUDA_COMPILER  ${CMAKE_CUDA_COMPILER}
+CMAKE_C_COMPILER_LAUNCHER  ${CMAKE_C_COMPILER_LAUNCHER}
+CMAKE_CXX_COMPILER_LAUNCHER  ${CMAKE_CXX_COMPILER_LAUNCHER}
+CMAKE_CUDA_COMPILER_LAUNCHER  ${CMAKE_CUDA_COMPILER_LAUNCHER}
+CMAKE_OSX_DEPLOYMENT_TARGET  ${CMAKE_OSX_DEPLOYMENT_TARGET}
+CMAKE_BUILD_TYPE  Release
+CMAKE_POSITION_INDEPENDENT_CODE  ON
+)
+
 if(GLIBCXX_USE_CXX11_ABI)
     add_compile_definitions(_GLIBCXX_USE_CXX11_ABI=1)
 else()
