--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,10 @@ cmake_minimum_required(VERSION 3.19.2)
 option(USE_ONE_API                "Use Intel OneAPI BaseKit"                 ON )
 if (USE_ONE_API)
     if(UNIX)
-        # set(CMAKE_C_COMPILER icx)
-        # set(CMAKE_CXX_COMPILER icpx)
-        set(CMAKE_C_COMPILER clang)
-        set(CMAKE_CXX_COMPILER clang++)
+        set(CMAKE_C_COMPILER icx)
+        set(CMAKE_CXX_COMPILER icpx)
+        # set(CMAKE_C_COMPILER clang)
+        # set(CMAKE_CXX_COMPILER clang++)
     endif(UNIX)
 
     set(CMAKE_CXX_STANDARD 17)
