--- a/.github/workflows/Dockerfile.cuda
+++ b/.github/workflows/Dockerfile.cuda
@@ -1,13 +1,28 @@
 # FROM must be called before other ARGS except for ARG BASE_IMAGE
-ARG BASE_IMAGE=nvidia/cuda:11.0.3-cudnn8-devel-ubuntu18.04
+ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
-# Customizable build arguments from cuda.yml
-ARG DEVELOPER_BUILD=ON
-ARG CCACHE_TAR_NAME=open3d-ubuntu-1804-cuda-ci-ccache
-ARG CMAKE_VERSION=cmake-3.19.7-Linux-x86_64
-ARG CCACHE_VERSION=4.3
-ARG PYTHON_VERSION=3.6
+# For miniconda and the rest of this Dockerfile
+SHELL ["/bin/bash", "-c"]
+
+# Required build args, should be specified in docker_build.sh
+ARG DEVELOPER_BUILD
+ARG CCACHE_TAR_NAME
+ARG CMAKE_VERSION
+ARG CCACHE_VERSION
+ARG PYTHON_VERSION
+ARG SHARED
+ARG BUILD_TENSORFLOW_OPS
+ARG BUILD_PYTORCH_OPS
+
+RUN if [ -z "${DEVELOPER_BUILD}"      ]; then echo "Error: ARG DEVELOPER_BUILD      not specified."; exit 1; fi \
+ && if [ -z "${CCACHE_TAR_NAME}"      ]; then echo "Error: ARG CCACHE_TAR_NAME      not specified."; exit 1; fi \
+ && if [ -z "${CMAKE_VERSION}"        ]; then echo "Error: ARG CMAKE_VERSION        not specified."; exit 1; fi \
+ && if [ -z "${CCACHE_VERSION}"       ]; then echo "Error: ARG CCACHE_VERSION       not specified."; exit 1; fi \
+ && if [ -z "${PYTHON_VERSION}"       ]; then echo "Error: ARG PYTHON_VERSION       not specified."; exit 1; fi \
+ && if [ -z "${SHARED}"               ]; then echo "Error: ARG SHARED               not specified."; exit 1; fi \
+ && if [ -z "${BUILD_TENSORFLOW_OPS}" ]; then echo "Error: ARG BUILD_TENSORFLOW_OPS not specified."; exit 1; fi \
+ && if [ -z "${BUILD_PYTORCH_OPS}"    ]; then echo "Error: ARG BUILD_PYTORCH_OPS    not specified."; exit 1; fi
 
 # Forward all ARG to ENV
 # ci_utils.sh requires these environment variables
@@ -16,14 +31,14 @@ ENV CCACHE_TAR_NAME=${CCACHE_TAR_NAME}
 ENV CMAKE_VERSION=${CMAKE_VERSION}
 ARG CCACHE_VERSION=${CCACHE_VERSION}
 ENV PYTHON_VERSION=${PYTHON_VERSION}
+ENV SHARED=${SHARED}
+ENV BUILD_TENSORFLOW_OPS=${BUILD_TENSORFLOW_OPS}
+ENV BUILD_PYTORCH_OPS=${BUILD_PYTORCH_OPS}
 
 # Prevent interactive inputs when installing packages
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=America/Los_Angeles
 ENV SUDO=command
-
-# Miniconda requires bash as the default shell.
-SHELL ["/bin/bash", "-c"]
 
 # Dependencies: basic
 RUN apt-get update && apt-get install -y \
@@ -52,7 +67,8 @@ RUN git clone https://github.com/ccache/ccache.git \
  && ccache --version \
  && ccache -s
 
-# Download ccache from GCS bucket (optional)
+# Download ccache from GCS bucket
+# If it doesn't exist on the cloud, an empty ${CCACHE_DIR} will be created.
 # Example directory structure:
 # CCACHE_DIR        = ~/.cache/ccache
 # CCACHE_DIR_NAME   = ccache
@@ -63,7 +79,8 @@ RUN CCACHE_DIR=$(ccache -p | grep cache_dir | grep -oE "[^ ]+$") \
  && mkdir -p ${CCACHE_DIR_PARENT} \
  && cd ${CCACHE_DIR_PARENT} \
  && (wget -q https://storage.googleapis.com/open3d-ci-cache/${CCACHE_TAR_NAME}.tar.gz || true) \
- && if [ -f ${CCACHE_TAR_NAME}.tar.gz ]; then tar -xf ${CCACHE_TAR_NAME}.tar.gz; fi
+ && if [ -f ${CCACHE_TAR_NAME}.tar.gz ]; then tar -xf ${CCACHE_TAR_NAME}.tar.gz; fi \
+ && mkdir -p ${CCACHE_DIR}
 # We need to set ccache size explicitly with -M, otherwise the defualt size is
 # *not* determined by ccache's default, but the downloaded ccache file's config.
 RUN ccache -M 5G \
@@ -86,18 +103,19 @@ RUN which python \
 ENV OPEN3D_ML_ROOT=/root/Open3D-ML
 RUN git clone --recursive https://github.com/intel-isl/Open3D-ML.git ${OPEN3D_ML_ROOT}
 
+# Open3D repo
+# Always keep /root/Open3D as the WORKDIR
+COPY . /root/Open3D
+WORKDIR /root/Open3D
+
 # Open3D C++ dependencies
-# Done before copying the full Open3D directory for better Docker caching
-COPY ./util/install_deps_ubuntu.sh /root/Open3D/util/
-RUN /root/Open3D/util/install_deps_ubuntu.sh assume-yes \
+RUN ./util/install_deps_ubuntu.sh assume-yes \
  && rm -rf /var/lib/apt/lists/*
 
 # Open3D Python dependencies
-COPY ./util/ci_utils.sh /root/Open3D/util/
-COPY ./python/requirements.txt /root/Open3D/python/
-COPY ./python/requirements_jupyter.txt /root/Open3D/python/
-RUN source /root/Open3D/util/ci_utils.sh \
- && install_python_dependencies with-conda with-jupyter
+RUN source util/ci_utils.sh \
+ && install_python_dependencies with-conda with-jupyter \
+ && pip install -r python/requirements_test.txt
 
 # Open3D Jupyter dependencies
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - \
@@ -107,18 +125,25 @@ RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - \
 RUN npm install -g yarn \
  && yarn --version
 
-# Open3D repo
-# Always keep /root/Open3D as the WORKDIR
-COPY . /root/Open3D
-WORKDIR /root/Open3D
-
-# Build python wheel
-RUN export NPROC=$(nproc) \
- && export SHARED=OFF \
- && export BUILD_TENSORFLOW_OPS=ON \
- && export BUILD_PYTORCH_OPS=ON \
- && source /root/Open3D/util/ci_utils.sh \
- && build_pip_conda_package build_azure_kinect build_jupyter
+# Build all
+RUN mkdir build \
+ && cd build \
+ && cmake -DBUILD_SHARED_LIBS="${SHARED}" \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DBUILD_LIBREALSENSE=ON \
+          -DBUILD_CUDA_MODULE=ON \
+          -DBUILD_COMMON_CUDA_ARCHS=ON \
+          -DBUILD_COMMON_ISPC_ISAS=ON \
+          -DBUILD_TENSORFLOW_OPS="${BUILD_TENSORFLOW_OPS}" \
+          -DBUILD_PYTORCH_OPS="${BUILD_PYTORCH_OPS}" \
+          -DBUILD_UNIT_TESTS=ON \
+          -DBUILD_BENCHMARKS=ON \
+          -DBUILD_EXAMPLES=ON \
+          -DCMAKE_INSTALL_PREFIX=~/open3d_install \
+          .. \
+ && make VERBOSE=1 -j$(nproc) \
+ && make install-pip-package -j$(nproc) \
+ && make install -j$(nproc)
 
 # Compress ccache folder, move to / directory
 RUN ccache -s \
@@ -126,6 +151,7 @@ RUN ccache -s \
  && CCACHE_DIR_NAME=$(basename ${CCACHE_DIR}) \
  && CCACHE_DIR_PARENT=$(dirname ${CCACHE_DIR}) \
  && cd ${CCACHE_DIR_PARENT} \
- && tar -czf /${CCACHE_TAR_NAME}.tar.gz ${CCACHE_DIR_NAME}
+ && tar -czf /${CCACHE_TAR_NAME}.tar.gz ${CCACHE_DIR_NAME} \
+ && ls -alh /
 
 RUN echo "Docker build done."
