--- a/.github/workflows/Dockerfile.wheel
+++ b/.github/workflows/Dockerfile.wheel
@@ -97,7 +97,7 @@ COPY ./util/ci_utils.sh /root/Open3D/util/
 COPY ./python/requirements.txt /root/Open3D/python/
 COPY ./python/requirements_jupyter.txt /root/Open3D/python/
 RUN source /root/Open3D/util/ci_utils.sh \
- && install_python_dependencies with-conda with-jupyter
+ && install_python_dependencies with-conda with-cuda with-jupyter
 
 # Open3D Jupyter dependencies
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - \
