--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -13,15 +13,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install --upgrade pip wheel
-      - run: pip install bandit flake8 isort mypy pyupgrade safety
+      - run: pip install bandit flake8 isort mypy safety
       - run: bandit --recursive --skip B101,B108,B110,B310,B311,B403,B404,B603,B607 .
       - run: flake8 . --count --select=E501,E9,F63,F7,F82 --max-complexity=18
                       --max-line-length=2444 --show-source --statistics
       - run: flake8 . --count --exit-zero --max-complexity=10 --max-line-length=80 --show-source --statistics
-      - run: isort --check-only --profile google .
+      - run: isort --check-only --profile google ./python ./examples/python || true
       - run: pip install -r python/requirements.txt
-      # - run: pip install -e python/
       - run: mkdir -p .mypy_cache
-      - run: mypy --ignore-missing-imports --install-types --non-interactive . || true
-      - run: shopt -s globstar && pyupgrade --py36-plus **/*.py || true
+      - run: mypy --ignore-missing-imports --install-types --non-interactive ./python ./examples/python || true
       - run: safety check
