--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ cmake_minimum_required(VERSION 3.19.2)
 # - parse JSON files for downloading files from the open3d_downloads repository
 # - use first-class language support for ISPC (3.19.2 patch release required)
 
-option(OPEN3D_USE_ONE_API "Use Intel OneAPI BaseKit and DPC++" ON)
-if (OPEN3D_USE_ONE_API)
+option(OPEN3D_USE_ONEAPI "Use Intel OneAPI BaseKit and DPC++" ON)
+if (OPEN3D_USE_ONEAPI)
     if (NOT UNIX OR APPLE)
         message(FATAL_ERROR "Open3D OneAPI support is only available on Linux")
     endif()
@@ -60,7 +60,7 @@ if(BUILD_SHARED_LIBS)
 else()
     option(STATIC_WINDOWS_RUNTIME "Use static (MT/MTd) Windows runtime"      ON )
 endif()
-if(OPEN3D_USE_ONE_API)
+if(OPEN3D_USE_ONEAPI)
     option(GLIBCXX_USE_CXX11_ABI  "Set -D_GLIBCXX_USE_CXX11_ABI=1"           ON )
 else()
     option(GLIBCXX_USE_CXX11_ABI  "Set -D_GLIBCXX_USE_CXX11_ABI=1"           OFF)
@@ -200,8 +200,8 @@ endif()
 if(BUILD_JUPYTER_EXTENSION AND NOT BUILD_PYTHON_MODULE)
     message(FATAL_ERROR "BUILD_JUPYTER_EXTENSION=ON requires BUILD_PYTHON_MODULE=ON")
 endif()
-if(OPEN3D_USE_ONE_API AND NOT GLIBCXX_USE_CXX11_ABI)
-    message(FATAL_ERROR "OPEN3D_USE_ONE_API=ON requires GLIBCXX_USE_CXX11_ABI=ON")
+if(OPEN3D_USE_ONEAPI AND NOT GLIBCXX_USE_CXX11_ABI)
+    message(FATAL_ERROR "OPEN3D_USE_ONEAPI=ON requires GLIBCXX_USE_CXX11_ABI=ON")
 endif()
 
 # Parse Open3D version number
