SHA256 verification working

--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -30,7 +30,7 @@ endmacro()
 open3d_add_example(CameraPoseTrajectory)
 open3d_add_example(ColorMapOptimization)
 open3d_add_example(DepthCapture)
-open3d_add_example(DownloadFile)
+open3d_add_example(DownloadFile              Open3D::3rdparty_curl Open3D::3rdparty_openssl)
 open3d_add_example(EvaluatePCDMatch)
 open3d_add_example(FileDialog                Open3D::3rdparty_tinyfiledialogs)
 open3d_add_example(FileSystem)
