zip format supported for extraction

--- a/cpp/open3d/Open3D.h.in
+++ b/cpp/open3d/Open3D.h.in
@@ -47,6 +47,7 @@
 #include "open3d/core/TensorList.h"
 #include "open3d/core/nns/NearestNeighborSearch.h"
 #include "open3d/data/Downloader.h"
+#include "open3d/data/extract/Extract.h"
 #include "open3d/geometry/BoundingVolume.h"
 #include "open3d/geometry/Geometry.h"
 #include "open3d/geometry/HalfEdgeTriangleMesh.h"
