--- a/.github/workflows/Dockerfile.cuda
+++ b/.github/workflows/Dockerfile.cuda
@@ -101,7 +101,7 @@ RUN which python \
 # Checkout Open3D-ML master branch
 # TODO: We may add support for local Open3D-ML repo or pinned ML repo tag
 ENV OPEN3D_ML_ROOT=/root/Open3D-ML
-RUN git clone --depth 1 https://github.com/intel-isl/Open3D-ML.git ${OPEN3D_ML_ROOT}
+RUN git clone --depth 1 https://github.com/isl-org/Open3D-ML.git ${OPEN3D_ML_ROOT}
 
 # Open3D repo
 # Always keep /root/Open3D as the WORKDIR
