--- a/.github/workflows/Dockerfile.wheel
+++ b/.github/workflows/Dockerfile.wheel
@@ -84,7 +84,7 @@ RUN which python \
 # Checkout Open3D-ML master branch
 # TODO: We may add support for local Open3D-ML repo or pinned ML repo tag
 ENV OPEN3D_ML_ROOT=/root/Open3D-ML
-RUN git clone https://github.com/intel-isl/Open3D-ML.git ${OPEN3D_ML_ROOT}
+RUN git clone https://github.com/isl-org/Open3D-ML.git ${OPEN3D_ML_ROOT}
 
 # Open3D C++ dependencies
 # Done before copying the full Open3D directory for better Docker caching
