--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -7,6 +7,10 @@ on:
         description: 'Set to OFF for Release wheels'
         required: false
         default: 'ON'
+      build_viewer_app:
+        description: 'Also build the Open3D Viewer app.'
+        required: false
+        default: 'OFF'
 
   push:
     branches:
@@ -66,6 +70,19 @@ jobs:
           ccache -s
           ./util/run_ci.sh
           ccache -s
+      - name: Build Open3D viewer app
+        if: ! matrix.BUILD_ML_OPS && (github.event.inputs.build_viewer_app || 'OFF')
+        run: |
+          PATH=/usr/local/var/homebrew/linked/ccache/libexec:$PATH
+          make -j${NPROC} Open3DViewer
+      - name: Upload Open3D viewer app
+        uses: actions/upload-artifact@v2
+        if: ! matrix.BUILD_ML_OPS && (github.event.inputs.build_viewer_app || 'OFF')
+        with:
+          name: open3d-app-macosx-10_15
+          path: |
+            build/bin/Open3D.app
+          if-no-files-found: error
 
   build-wheel:
     name: Build wheel
