--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -71,13 +71,13 @@ jobs:
           ./util/run_ci.sh
           ccache -s
       - name: Build Open3D viewer app
-        if: ! matrix.BUILD_ML_OPS && (github.event.inputs.build_viewer_app || 'OFF')
+        if: ${{ ! matrix.BUILD_ML_OPS && (github.event.inputs.build_viewer_app || 'OFF') }}
         run: |
           PATH=/usr/local/var/homebrew/linked/ccache/libexec:$PATH
           make -j${NPROC} Open3DViewer
       - name: Upload Open3D viewer app
         uses: actions/upload-artifact@v2
-        if: ! matrix.BUILD_ML_OPS && (github.event.inputs.build_viewer_app || 'OFF')
+        if: ${{ ! matrix.BUILD_ML_OPS && (github.event.inputs.build_viewer_app || 'OFF') }}
         with:
           name: open3d-app-macosx-10_15
           path: |
