--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -37,7 +37,6 @@ jobs:
       LOW_MEM_USAGE: ON
     steps:
       - name: Cancel outdated
-        if: ${{ matrix.BUILD_ML_OPS == 'OFF' && (github.event.inputs.build_viewer_app != 'OFF') }}
         uses: fkirc/skip-duplicate-actions@master
         with:
           github_token: ${{ github.token }}
@@ -75,7 +74,9 @@ jobs:
         if: ${{ matrix.BUILD_ML_OPS == 'OFF' && (github.event.inputs.build_viewer_app != 'OFF') }}
         run: |
           PATH=/usr/local/var/homebrew/linked/ccache/libexec:$PATH
+          pushd build
           make -j${NPROC} Open3DViewer
+          popd
       - name: Upload Open3D viewer app
         uses: actions/upload-artifact@v2
         if: ${{ matrix.BUILD_ML_OPS == 'OFF' && (github.event.inputs.build_viewer_app != 'OFF') }}
