--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       developer_build:
-        description: 'Set to OFF for Release wheels'
+        description: 'Set to OFF for Release wheels.'
         required: false
         default: 'ON'
 
@@ -66,6 +66,21 @@ jobs:
           ccache -s
           ./util/run_ci.sh
           ccache -s
+      - name: Build Open3D viewer app
+        if: ${{ matrix.BUILD_ML_OPS == 'OFF' }}
+        run: |
+          PATH=/usr/local/var/homebrew/linked/ccache/libexec:$PATH
+          pushd build
+          make -j${NPROC} Open3DViewer
+          pushd bin
+          zip -rv open3d-app-macosx-10_15.zip Open3D.app
+      - name: Upload Open3D viewer app
+        uses: actions/upload-artifact@v2
+        if: ${{ matrix.BUILD_ML_OPS == 'OFF' }}
+        with:
+          name: open3d-app-macosx-10_15
+          path: build/bin/open3d-app-macosx-10_15.zip
+          if-no-files-found: error
 
   build-wheel:
     name: Build wheel
