--- a/cpp/pybind/data/CMakeLists.txt
+++ b/cpp/pybind/data/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(pybind PRIVATE
-    data.cpp
-    downloader.cpp
-)
+# target_sources(pybind PRIVATE
+#     data.cpp
+#     downloader.cpp
+# )
