--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           python-version: 3.6
       - name: GCloud CLI setup
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0.2.1
         with:
           version: ${{ env.GCE_CLI_GHA_VERSION }}
           service_account_key: ${{ secrets.GCE_SA_KEY_DOCS_CI }}
