--- a/.github/workflows/Dockerfile.openblas
+++ b/.github/workflows/Dockerfile.openblas
@@ -102,6 +102,7 @@ RUN mkdir build \
     -DCMAKE_C_COMPILER=gcc \
     -DCMAKE_CXX_COMPILER=g++ \
     -DBUILD_FILAMENT_FROM_SOURCE=ON \
+    -DGLIBCXX_USE_CXX11_ABI=ON \
     -DBUILD_TENSORFLOW_OPS=OFF \
     -DBUILD_PYTORCH_OPS=OFF \
     -DBUILD_UNIT_TESTS=ON \
