install pyenv plugin

--- a/.github/workflows/Dockerfile.openblas
+++ b/.github/workflows/Dockerfile.openblas
@@ -93,6 +93,7 @@ RUN apt-get update -y && apt-get install -y \
 RUN git clone --depth=1 git://github.com/yyuu/pyenv.git /root/.pyenv
 ENV PYENV_ROOT="/root/.pyenv"
 ENV PATH="${PYENV_ROOT}/bin:${PYENV_ROOT}/shims:${PATH}"
+RUN git clone https://github.com/momo-lab/pyenv-install-latest.git "$(pyenv root)"/plugins/pyenv-install-latest
 
 # CMake
 # PWD is /, camke will be installed to /root/${CMAKE_VER}/bin/cmake
