--- a/.github/workflows/ubuntu-openblas.yml
+++ b/.github/workflows/ubuntu-openblas.yml
@@ -29,10 +29,7 @@ jobs:
           maximize_ubuntu_github_actions_build_space
       - name: Docker build
         run: |
-          .github/workflows/docker_build.sh openblas-amd64
-      - name: Docker test
-        run: |
-          .github/workflows/docker_test.sh openblas-amd64
+          .github/workflows/docker_build.sh openblas-amd64-py36-dev
       - name: GCloud CLI setup
         uses: google-github-actions/setup-gcloud@v0.2.1
         with:
@@ -43,7 +40,9 @@ jobs:
       - name: Upload ccache to GCS
         run: |
           gsutil cp ${GITHUB_WORKSPACE}/open3d-ci-openblas-amd64.tar.gz gs://open3d-ci-cache/ || true
-
+      - name: Docker test
+        run: |
+          .github/workflows/docker_test.sh openblas-amd64-py36-dev
 
   # How to resolve GitHub Actions ARM64 build timeout.
   #
@@ -78,7 +77,7 @@ jobs:
           sudo apt-get --yes install qemu binfmt-support qemu-user-static
       - name: Docker build
         run: |
-          .github/workflows/docker_build.sh openblas-arm64
+          .github/workflows/docker_build.sh openblas-arm64-py36-dev
       - name: GCloud CLI setup
         uses: google-github-actions/setup-gcloud@v0.2.1
         with:
@@ -91,4 +90,4 @@ jobs:
           gsutil cp ${GITHUB_WORKSPACE}/open3d-ci-openblas-arm64.tar.gz gs://open3d-ci-cache/ || true
       - name: Docker test
         run: |
-          .github/workflows/docker_test.sh openblas-arm64
+          .github/workflows/docker_test.sh openblas-arm64-py36-dev
