use fatal_error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,10 +164,10 @@ if ((LINUX_AARCH64 OR APPLE_AARCH64) AND BUILD_ISPC_MODULE)
     message(FATAL_ERROR "ISPC module is not yet supported on ARM Linux")
 endif()
 if ((LINUX_AARCH64 OR APPLE_AARCH64) AND NOT BUILD_FILAMENT_FROM_SOURCE)
-    message(WARNING "ARM CPU detected, you must set BUILD_FILAMENT_FROM_SOURCE=ON.")
+    message(FATAL_ERROR "ARM CPU detected, you must set BUILD_FILAMENT_FROM_SOURCE=ON.")
 endif()
 if ((LINUX_AARCH64 OR APPLE_AARCH64) AND NOT USE_BLAS)
-    message(WARNING "ARM CPU detected, you must set USE_BLAS=ON.")
+    message(FATAL_ERROR "ARM CPU detected, you must set USE_BLAS=ON.")
 endif()
 if (APPLE AND ENABLE_HEADLESS_RENDERING)
     message(WARNING "Headless rendering is not supported on Mac OS")
