--- a/cpp/open3d/data/CMakeLists.txt
+++ b/cpp/open3d/data/CMakeLists.txt
@@ -2,8 +2,8 @@ open3d_ispc_add_library(data OBJECT)
 
 target_sources(data PRIVATE
     Dataset.cpp
-    extract/Extract.cpp
-    extract/Zip.cpp
+    Extract.cpp
+    ExtractZIP.cpp
 )
 
 open3d_show_and_abort_on_warning(data)
