--- a/cpp/open3d/t/geometry/CMakeLists.txt
+++ b/cpp/open3d/t/geometry/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(tgeometry PRIVATE
     TriangleMesh.cpp
     TSDFVoxelGrid.cpp
     VoxelBlockGrid.cpp
+    Grid.cpp
 )
 
 open3d_show_and_abort_on_warning(tgeometry)
