--- a/cpp/open3d/data/CMakeLists.txt
+++ b/cpp/open3d/data/CMakeLists.txt
@@ -8,6 +8,12 @@ target_sources(data PRIVATE
     extract_src/minizip/unzip.c
 )
 
+if(WIN32)
+target_sources(data PRIVATE
+    extract_src/minizip/ioapi32.c
+)
+endif()
+
 open3d_show_and_abort_on_warning(data)
 open3d_set_global_properties(data)
 open3d_set_open3d_lib_properties(data)
