--- a/cpp/open3d/utility/CMakeLists.txt
+++ b/cpp/open3d/utility/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(utility PRIVATE
     Helper.cpp
     IJsonConvertible.cpp
     ISAInfo.cpp
+    License.cpp
     Logging.cpp
     Parallel.cpp
     ProgressBar.cpp
