--- a/cpp/open3d/data/CMakeLists.txt
+++ b/cpp/open3d/data/CMakeLists.txt
@@ -3,6 +3,8 @@ open3d_ispc_add_library(data OBJECT)
 target_sources(data PRIVATE
     Dataset.cpp
     Downloader.cpp
+    Extract.cpp
+    ExtractZIP.cpp
 )
 
 open3d_show_and_abort_on_warning(data)
