--- a/.github/workflows/Dockerfile.openblas
+++ b/.github/workflows/Dockerfile.openblas
@@ -18,6 +18,7 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     ccache \
     clang-7 \
+    gfortran \
     git  \
     libc++-7-dev \
     libc++abi-7-dev \
